# lab06

./: CMakeLists.txt  License.rtf
.github/workflows/: CI.yml
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
